[FIX] : Agree Page Vertical Align

--- a/src/main/where42/src/Agree/Agree_Desktop.css
+++ b/src/main/where42/src/Agree/Agree_Desktop.css
@@ -7,6 +7,7 @@
 #Agree #Desktop #Wrapper
 {
     display : flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     position: relative;
